<resources>
    <string name="app_name">E充站</string>
    <string name="text_default_placeholder">--</string>
    <string name="text_default_loading">加载中&#8230;</string>
    <string name="text_guide">不再提醒</string>
    <string name="text_guide_next">跳过</string>
    <string name="text_default_load_fail_click_again">您的网络开小差啦</string>
    <string name="text_no_data">暂无数据</string>
    <string name="dialog_title">温馨提示</string>
    <string name="dialog_title_hint">提示</string>
    <string name="text_ok">确定</string>
    <string name="text_affirm">确认</string>
    <string name="text_exit">退出</string>
    <string name="text_exit_app">退出APP</string>
    <string name="text_disagree">不同意</string>
    <string name="text_agree">同意</string>
    <string name="text_retry">重试</string>
    <string name="text_submit">提交</string>
    <string name="text_cancel">取消</string>
    <string name="text_next">下一步</string>
    <string name="text_finish">完成</string>
    <string name="text_login">登录</string>
    <string name="text_find_pwd">忘记密码</string>
    <string name="text_inputPhone">请输入手机号码</string>
    <string name="text_inputNewPhone">请输入新的手机号码</string>
    <string name="text_inputOldPwd">请输入旧密码</string>
    <string name="text_inputNewPwd">请输入新密码</string>
    <string name="text_inputPwd">请输入密码</string>
    <string name="text_inputPwdAgain">请确认新密码</string>
    <string name="text_verifyCode">获取验证码</string>
    <string name="text_again_get_verifyCode">重新获取</string>
    <string name="text_inputVerifyCode">请输入验证码</string>
    <string name="text_checkProtocol">请勾选会员使用协议</string>
    <string name="pay_success">支付成功!</string>
    <string name="text_to_pay">去支付</string>
    <string name="pay_verifying">支付结果确认中</string>
    <string name="pay_fail">支付失败</string>
    <string name="pay_cancel">取消支付</string>
    <string name="text_no_wx">您没有安装微信</string>
    <string name="text_no_qq">您没有安装QQ</string>
    <string name="text_shipping_prompt">本次开票金额不足%1$s元\n如选择纸质发票开具，邮费需您自行承担\n </string>
    <string name="text_invoice_amount_max">单张电子发票开票累计金额不能超过%1$s，您可以选择开具纸质发票，或重新选择开票金额。</string>
    <string name="text_invoice_amount_max_no_page">单张电子发票开票累计金额不能超过%1$s，您可以重新选择开票金额。</string>
    <string name="text_invoice_ele_no_lines">本月电子发票张数已达限额，您可以选择开具纸质发票，或在次月尝试提交电子发票开票申请。</string>
    <string name="text_invoice_ele_no_page_lines">本月电子发票张数已达限额，您可以在次月尝试提交电子发票开票申请。</string>
    <string name="text_unfreeze_hint">该订单的冻结金额已释放至账户的剩余可用额度。在订单完成结算时，系统将按照实际充电情况扣除账户余额。</string>
    <string name="text_more_info">共%1$d项 已填写%2$d项</string>
    <string name="text_location_city"><Data><![CDATA[当前定位城市： <font color="#ff8a00">%1$s</font>]]></Data></string>
    <string name="text_location_fail">无法获取您的位置，点击此处开启定位服务</string>
    <string name="text_location_fail1">无法获取您的位置，点击此处重新定位</string>
    <string name="text_location_fail2">无法获取您的位置，点击此处开启定位权限</string>
    <string name="text_location_fail3">定位中，请稍候。。。</string>
    <string name="error_data">数据获取失败，请重试</string>
    <string name="error_netWork">当前无网络连接，请检查网络</string>
    <string name="error_common">出错了，请联系客服</string>
    <string name="text_serial_modify_hint"> 温馨提示：\n1、自动续费协议确认取消后，将不再自动续费。\n2、自动续费协议取消后，当期套餐内的正常电量仍可继续使用，有效期至当期期末。\n3、自动续费协议取消后将不再结转当期套餐内未使用完的电量。</string>
    <string name="text_serial_modify_guard_hint"> 温馨提示：\n取消后自下一期月费续费时，将不再为您自动代扣月费保障服务费用。</string>
    <string name="text_input_invitation_code">请输入邀请码(选填)</string>
    <string name="text_invitation_code">邀请码</string>
    <string name="text_no_use_invitation_code">不使用邀请码</string>
    <string name="text_coupon_can_use_num">%d张优惠券可用</string>
    <string name="text_coupon_code_power1">结算度数减%s度</string>
    <string name="text_coupon_code_power2">结算度数满%1$s度减%2$s度</string>
    <string name="text_coupon_code_power3">服务费减%1$s点</string>
    <string name="text_coupon_code_power7">服务费 %1$s折</string>
    <string name="text_coupon_code_power8">服务费满%1$s点减%2$s点</string>
    <string name="text_coupon_code_power9">-%s点</string>
    <string name="text_coupon_code_power10">-%s度</string>
    <string name="text_coupon_code_power4"><![CDATA[抵扣电量 <font color="#FF8927">%1$s</font> 度]]></string>
    <string name="text_coupon_service_code_power1"><![CDATA[充电服务费减 <font color="#FF8927">%1$s</font> 点]]></string>
    <string name="text_coupon_service_code_power2"><![CDATA[充电服务费打 <font color="#FF8927">%1$s</font> 折]]></string>
    <string name="text_invitation_code_error">请输入有效的邀请码</string>
    <string name="sku_gift_echong">含赠送%1$s易充点</string>
    <string name="sku_gift_service">赠送%1$s服务费抵用金</string>
    <string name="text_choose_coupon">选择优惠劵</string>
    <string name="text_coupon_use_fail">您在启动充电时选择的“%s”无法使用</string>
    <string name="text_coupon_save_fee">已为您节省了%1$s度电量</string>
    <string name="text_monthly_save_fee"><Data><![CDATA[已为您节省了<font color="#FF8927">%1$s</font>度电量]]></Data></string>
    <string name="text_user_save_fee"><Data><![CDATA[已为您节省了<font color="#FF8927">%1$s</font>点]]></Data></string>
    <string name="text_coupon_use_fail1">请调整充电度数以符合优惠券满减条件，或重新选择优惠券</string>
    <string name="text_coupon_use_fail2">账户余额未达到优惠券满减条件，请重新选择优惠券</string>
    <string name="text_prompt_freeze">正在充电时，系统将暂时冻结相关账户当次充电额度，充电结束后将使用该部分额度进行结算。实际扣费以后台结算为准。</string>
    <string name="text_hint_pwd_accordance">两次输入的密码不一致</string>
    <string name="text_hint_pwd_length">密码必须是8-20位，且包括大写字母、小写字母和数字。</string>
    <string name="text_hint_pwd_length_2">密码格式错误，请重新输入</string>
    <string name="text_hint_phone">请输入正确的手机号码</string>
    <string name="text_phone_not_same">新手机号不能与原手机号相同</string>
    <string name="text_pile_state">开始获取充电桩状态</string>
    <string name="info_user_name">用&#8194;户&#8194;名</string>
    <string name="info_user_name_hind">请输入姓名，方便我们后续联系您</string>
    <string name="info_sex_hind">性别选项只允许修改一次</string>
    <string name="info_sex">性&#8195;&#8195;别</string>
    <string name="vehicle_defaultCar">设为常用车辆</string>
    <string name="vehicle_delCar">删除</string>
    <string name="vehicle_addCar">添加车辆</string>
    <string name="vehicle_auto_data">车展数据</string>
    <string name="vehicle_input_number">请输入车牌号码</string>
    <string name="login_account">账号密码登录</string>
    <string name="login_phone">手机密码登录</string>
    <string name="login_mcode">验证码登录</string>
    <string name="login_input_phone">请输入手机号码</string>
    <string name="login_input_account">请输入账号</string>
    <string name="login_input_pwd">请输入密码</string>
    <string name="login_forget_pwd"><u>忘记密码?</u></string>
    <string name="login_agreement">《E充站用户使用协议》</string>
    <string name="login_privacy_agreement">《隐私政策》</string>
    <string name="login_reg_input_phone">请输入您的手机号码</string>
    <string name="login_reg_input_verify_code">请输入收到的验证码</string>
    <string name="login_reg_call_service"><Data><![CDATA[如有任何疑问可联系E充站客服<font color="#2ea4f9">%1$s</font>]]></Data></string>
    <string name="login_find_not_verify_code">收不到验证码?试试<Data><![CDATA[<font color="#2ea4f9">语音验证码</font>]]></Data></string>
    <string name="login_find_input_phone">请输入绑定的手机号码</string>
    <string name="login_find_input_pwd">请输入您的新密码</string>
    <string name="login_find_input_pwd_confirm">请重复您的新密码</string>
    <string name="login_find_complete">完成</string>
    <string name="login_bind">绑定</string>
    <string name="login_bind_mobile">绑定手机</string>
    <string name="login_bind_explain">为了保证您的账号安全，请绑定手机号码。您可使用绑定的手机号码登录或找回密码。</string>
    <string name="login_card_input_number">请输入您的易充卡号</string>
    <string name="login_card_input_code">请输入启动码</string>
    <string name="login_card_bind_not">未绑定易充卡号</string>
    <string name="complete_info_address">请选择您所在的区域</string>
    <string name="complete_info_address_detail">请输入详细地址</string>
    <string name="text_man">先生</string>
    <string name="text_lady">女士</string>
    <string name="text_address">所在区域</string>
    <string name="text_address_info">详细地址</string>
    <string name="text_choose">请选择</string>
    <string name="text_price2">%s元</string>
    <string name="text_price4">¥%s</string>
    <string name="text_price5"><Data><![CDATA[<small><small><small>¥</small></small></small>%s]]></Data></string>
    <string name="text_price8"><Data><![CDATA[<small><small><small><font color="#999999">首月</font>¥</small></small></small>%s]]></Data></string>
    <string name="text_price7"><Data><![CDATA[<small>¥</small>%s]]></Data></string>
    <string name="text_price6"><Data><![CDATA[<small><small><small>首月¥</small></small></small>%s]]></Data></string>
    <string name="monthly_power">每月%s度电</string>
    <string name="monthly_given_point">每月赠%s点</string>
    <string name="monthly_given_point1">一次性赠%s点</string>
    <string name="monthly_given_power">每月赠%s度</string>
    <string name="monthly_given_power1">一次性赠%s度</string>
    <string name="monthly_given_monthly">%s期</string>
    <string name="monthly_given_Guard">%s期</string>
    <string name="monthly_given_coupon">赠%d张券</string>
    <string name="monthly_upgrade_prompt" translatable="false">1、若合约期内，套餐被使用且剩余月份大于等于1的情况下允许升级。\n2、仅需支付差价则可升级到更高套餐。\n3、升级套餐于次月生效， 套餐包赠品沿用升级前级别， 不退不换， 不再额外升级。</string>
    <string name="monthly_stop_prompt" translatable="false">温馨提示：\n 1、若因用户个人原因暂时终止服务，我司支持冻结合约期业务，您可能需要支付冻结管理费（可通过易充点数代扣）。\n2、若因公司等原因造成的中止服务，您的包月套餐服务合约自动顺延，无需支付管理费。</string>
    <string name="monthly_guard_dialog">您可购买该套餐中剩余%1$s期的月费保障服务（共%2$s元）。</string>
    <string name="monthly_continuous_guard_dialog">开通月费保障后，将在后续连续包月自动续费时为您同时扣除月费保障服务费%1$s</string>
    <string name="text_point2">%s点</string>
    <string name="text_point3">%.2f</string>
    <string name="text_power2">%s度</string>
    <string name="text_echong_unit">点</string>
    <string name="text_echong_price_unit">%s/度</string>
    <string name="text_power3"><Data><![CDATA[<font color="#2ea4f9">%1$.2f</font>度]]></Data></string>
    <string name="text_power5">+%s度</string>
    <string name="text_power4">%.2f度</string>
    <string name="text_power6"><Data><![CDATA[<font color="#2ea4f9">%1$.2f</font>/%2$.2f]]></Data></string>
    <string name="text_power7">--/%.2f</string>
    <string name="text_surplus_point">剩余点数：%s点</string>
    <string name="text_surplus_power">剩余度数：%s度</string>
    <string name="text_point_buy">购买点数：%s</string>
    <string name="text_point_given">赠送点数：%s</string>
    <string name="text_point_service">服务费抵用金点数：%s</string>
    <string name="text_month_normal">套餐额度：%s</string>
    <string name="text_month_carryover">上月结转额度：%s</string>
    <string name="text_month_gift">赠送额度：%s</string>
    <string name="text_month_endurance">续航包额度：%s</string>
    <string name="text_monthly_periods">共%1$d期</string>
    <string name="text_monthly_periods1">共%1$d期(当前第%2$d期)</string>
    <string name="text_monthly_periods2">第%1$d期</string>
    <string name="text_monthly_periods3">当前第%1$d期</string>
    <string name="text_monthly_next_periods_price">(下期资费%1$.2f元)</string>
    <string name="text_account">账号</string>
    <string name="text_update_phone">修改手机号</string>
    <string name="text_contact">联系方式</string>
    <string name="text_update_pwd">修改密码</string>
    <string name="text_about_us">关于我们</string>
    <string name="text_cache">清理缓存</string>
    <string name="text_share">APP分享</string>
    <string name="text_notice">消息提醒设置</string>
    <string name="text_share_hind">把E充站分享给好友，一起体验充电的便捷</string>
    <string name="text_share_parameter_error">分享参数异常,请联系客服</string>
    <string name="text_logout">退出登录</string>
    <string name="text_enterprise">企业认证</string>
    <string name="text_card_number">易充卡号</string>
    <string name="text_address_string">%1$s&#12288;%2$s&#12288;%3$s</string>
    <string name="text_company_string"><Data><![CDATA[<font color="#2ea4f9">%1$s</font>]]></Data></string>
    <string name="info_not_address">暂无信息</string>
    <string name="text_hint_uint">价格单位:点/度</string>
    <string name="text_hint_uint_2">价格单位:%1$s/度</string>
    <string name="text_hint_promo">结算费用精确到小数点后两位，实际结算费用以页面显示为准。</string>
    <string name="invoice_explain">开票金额说明</string>
</resources>