<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View"/>
        <import type="com.example.loginkotlin.R"/>
        <import type="androidx.core.content.ContextCompat" />

        <variable
            name="loginPhoneVo"
            type="com.example.loginkotlin.viewstate.LoginPhoneVo" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@mipmap/login_bg"
        android:fitsSystemWindows="true"
        android:orientation="vertical">

        <include
            android:id="@+id/title_bar"
            layout="@layout/title_bar_transparent" />

        <ScrollView
            android:id="@+id/login_scrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_20"
                android:layout_marginEnd="@dimen/margin_20"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/login_logo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/title_height"
                    android:src="@mipmap/login_logo" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/edit_height"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:src="@{loginPhoneVo.accountLeftImageRes}"
                        tools:src="@mipmap/login_phone_unselected"/>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="@dimen/margin_14">

                        <EditText
                            android:id="@+id/login_num"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:lines="1"
                            android:maxLength="11"
                            android:inputType="phone"
                            android:longClickable="false"
                            android:background="@null"
                            android:text="@{loginPhoneVo.loginAccountStr}"
                            android:textColor="@color/white"
                            android:textSize="@dimen/size_15"
                            android:textColorHint="@color/login_edit_unselected"
                            android:hint="@string/login_input_phone"/>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@{ContextCompat.getColor(context, loginPhoneVo.accountLineColorRes)}"
                            android:layout_alignParentBottom="true"
                            tools:background="@color/login_edit_unselected"/>
                    </RelativeLayout>
                </LinearLayout>

                <RelativeLayout
                    android:id="@+id/login_rlCode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="@{loginPhoneVo == null? View.GONE : loginPhoneVo.isShowCodeLayout()}">

                    <LinearLayout
                        android:id="@+id/login_code_layout"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/edit_height"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:src="@{loginPhoneVo.codeLeftImageRes}"
                            tools:src="@mipmap/login_reg_verify_code_unselected"/>

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginStart="@dimen/margin_14">
                            <EditText
                                android:id="@+id/login_code"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_centerVertical="true"
                                android:longClickable="false"
                                android:lines="1"
                                android:maxLength="11"
                                android:inputType="number"
                                android:background="@null"
                                android:textColor="@color/white"
                                android:textSize="@dimen/size_15"
                                android:textColorHint="@color/login_edit_unselected"
                                android:hint="@string/text_inputVerifyCode"/>

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:background="@{ContextCompat.getColor(context, loginPhoneVo.codeLineColorRes)}"
                                android:layout_alignParentBottom="true"
                                tools:background="@color/login_edit_unselected"/>
                        </RelativeLayout>
                    </LinearLayout>

                    <TextView
                        android:id="@+id/login_getVerifyCode"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/edit_height"
                        android:layout_alignParentEnd="true"
                        android:gravity="center"
                        android:textSize="@dimen/size_14"
                        android:textColor="@drawable/text_checked_grey"
                        android:enabled="@{loginPhoneVo.getVerifyCodeEnable}"
                        android:text="@string/text_verifyCode"
                        android:layout_marginEnd="10dip"
                        tools:textColor="@color/login_edit_unselected"/>

                    <FrameLayout
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/edit_height"
                        android:layout_marginEnd="10dip"
                        android:layout_toStartOf="@+id/login_getVerifyCode">

                        <View
                            android:layout_width="1dip"
                            android:layout_height="@dimen/margin_25"
                            android:layout_gravity="center_vertical"
                            android:background="@color/login_edit_unselected" />
                    </FrameLayout>

                    <TextView
                        android:id="@+id/login_rlCode_hind"
                        style="@style/TextColor_Grey9_12"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/login_code_layout"
                        android:layout_marginStart="33dp"
                        android:layout_marginTop="@dimen/drawable_padding_normal"
                        android:text="未注册手机号验证通过后将自动登录"
                        android:visibility="visible" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/login_rlPwd"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/edit_height"
                    android:visibility="@{loginPhoneVo == null? View.GONE : loginPhoneVo.isShowPasswordLayout()}">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/edit_height"
                        android:layout_marginEnd="75dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:src="@{loginPhoneVo.passwordLeftImageRes}"
                            tools:src="@mipmap/login_pwd_unselected"/>

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginStart="@dimen/margin_14">
                            <EditText
                                android:id="@+id/login_pwd"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_centerVertical="true"
                                android:lines="1"
                                android:inputType="textPassword"
                                android:longClickable="false"
                                android:background="@null"
                                android:textColor="@color/white"
                                android:textSize="@dimen/size_15"
                                android:textColorHint="@color/login_edit_unselected"
                                android:maxLength="20"
                                android:hint="@string/login_input_pwd"/>

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:layout_alignParentBottom="true"
                                android:background="@{ContextCompat.getColor(context, loginPhoneVo.passwordLineColorRes)}"
                                tools:background="@color/login_edit_unselected"/>
                        </RelativeLayout>
                    </LinearLayout>

                    <TextView
                        android:id="@+id/login_forget_pwd"
                        style="@style/TextColor_White_14"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentBottom="true"
                        android:text="@string/login_forget_pwd" />

                </RelativeLayout>

                <TextView
                    android:id="@+id/login_call"
                    style="@style/TextColor_White_14"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="35dp"
                    android:gravity="end"
                    android:visibility="@{loginPhoneVo.isShowLoginCall}" />

                <Button
                    android:id="@+id/login_submit"
                    android:layout_height="@dimen/button_normal_height"
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textSize="@dimen/size_16"
                    android:layout_marginTop="@dimen/margin_normal"
                    android:enabled="@{loginPhoneVo.loginBtnEnable}"
                    android:background="@{ContextCompat.getDrawable(context, R.drawable.button_main)}"
                    android:text="@string/text_login" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dip"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/login_account"
                        style="@style/TextColor_White_14"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="4dip"
                        android:paddingEnd="@dimen/margin_normal"
                        android:paddingBottom="@dimen/margin_normal"
                        android:text="@{loginPhoneVo.switchLoginTypeStr}" />

                    <TextView
                        android:id="@+id/login_accountLogin"
                        style="@style/TextColor_White_14"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:paddingStart="@dimen/margin_normal"
                        android:paddingTop="4dip"
                        android:paddingBottom="@dimen/margin_normal"
                        android:text="@string/login_account" />
                </FrameLayout>
            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:id="@+id/login_agreementLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/padding_normal"
            android:gravity="bottom|center_horizontal">

            <CheckBox
                android:id="@+id/login_write_account"
                style="@style/TextColor_White_14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@null"
                android:checked="false"
                android:drawableLeft="@drawable/checkbox1_bg"
                android:drawablePadding="5dip"
                android:text="登录即表示同意" />

            <TextView
                android:id="@+id/login_agreement1"
                style="@style/TextColor_Blue_13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_agreement" />

            <TextView
                style="@style/TextColor_White_14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="和" />

            <TextView
                android:id="@+id/login_agreement2"
                style="@style/TextColor_Blue_13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_privacy_agreement" />
        </LinearLayout>

    </LinearLayout>

</layout>